--- a/deploy/olm-catalog/ibm-helm-repo-operator/3.6.3/ibm-helm-repo-operator.v3.6.3.clusterserviceversion.yaml
+++ b/deploy/olm-catalog/ibm-helm-repo-operator/3.6.3/ibm-helm-repo-operator.v3.6.3.clusterserviceversion.yaml
@@ -8,9 +8,6 @@ metadata:
           "apiVersion": "operator.ibm.com/v1alpha1",
           "kind": "HelmRepo",
           "metadata": {
-            "annotations": {
-              "helm.operator-sdk/upgrade-force": "True"
-            },
             "labels": {
               "app.kubernetes.io/instance": "helm-repo",
               "app.kubernetes.io/managed-by": "helmrepos.operator.ibm.com",
@@ -73,7 +70,7 @@ metadata:
     createdAt: "2020-05-16"
     description: Helm Repo is a helm chart repository for storing and supplying IBM
       and local charts.
-    olm.skipRange: ">=3.5.0 <3.6.3"
+    olm.skipRange: '>=3.5.0 <3.6.3'
     repository: https://github.com/IBM/ibm-helm-repo-operator
     support: IBM
   name: ibm-helm-repo-operator.v3.6.3
@@ -232,9 +229,9 @@ spec:
                 - name: OPERAND_AUDIT_SERVICE_ENABLED
                   value: "false"
                 - name: OPERAND_AUDIT_SERVICE_IMAGE
-                  value: quay.io/opencloudio/icp-audit-service@sha256:24a220374c39652f8b031637d852995bfaec5be2601f9e4c41eb1925531f466d
+                  value: quay.io/opencloudio/icp-audit-service@sha256:a649814564039ee923cb503720e9c5e87c20b3c340f06c48660490aeaed04d5a
                 - name: OPERAND_HELM_REPO_IMAGE
-                  value: quay.io/opencloudio/icp-helm-repo@sha256:85c4a66efc7eabf2a7cca18730362b2dc2731edd061983948f73757eb3af21fa
+                  value: quay.io/opencloudio/icp-helm-repo@sha256:048bd56d93928c0e6dc1e0a89d9bc6e62a04d67795371acd69b207d4f36cbdc7
                 image: quay.io/opencloudio/ibm-helm-repo-operator:latest
                 imagePullPolicy: Always
                 name: ibm-helm-repo-operator
