--- a/helm-charts/helm-repo/templates/deployment.yaml
+++ b/helm-charts/helm-repo/templates/deployment.yaml
@@ -46,6 +46,15 @@ spec:
                   - amd64
                   - ppc64le
                   - s390x
+        podAntiAffinity:
+          requiredDuringSchedulingIgnoredDuringExecution:
+          - labelSelector:
+              matchExpressions:
+              - key: app
+                operator: In
+                values:
+                - "helm-repo"
+            topologyKey: "kubernetes.io/hostname"
       hostNetwork: false
       hostPID: false
       hostIPC: false
