--- a/deploy/olm-catalog/ibm-helm-repo-operator/3.6.4/ibm-helm-repo-operator.v3.6.4.clusterserviceversion.yaml
+++ b/deploy/olm-catalog/ibm-helm-repo-operator/3.6.4/ibm-helm-repo-operator.v3.6.4.clusterserviceversion.yaml
@@ -73,6 +73,11 @@ metadata:
     olm.skipRange: '>=3.5.0 <3.6.4'
     repository: https://github.com/IBM/ibm-helm-repo-operator
     support: IBM
+  labels:
+    operatorframework.io/arch.amd64: supported
+    operatorframework.io/arch.ppc64le: supported
+    operatorframework.io/arch.s390x: supported
+    operatorframework.io/os.linux: supported
   name: ibm-helm-repo-operator.v3.6.4
   namespace: ibm-common-services
 spec:
