--- a/helm-charts/helm-repo/Chart.yaml
+++ b/helm-charts/helm-repo/Chart.yaml
@@ -11,7 +11,7 @@ keywords:
   - amd64
   - ppc64le
   - s390x
-kubeVersion: '>=1.11.0'
+kubeVersion: '>=1.11.0-0'
 tillerVersion: '>=2.16.1'
 name: helm-repo
 version: 3.6.4
